--- a/myflask/templates/input.html
+++ b/myflask/templates/input.html
@@ -64,10 +64,15 @@
 
         <form  action="/output" method="GET">
             <div class="form-group">
-                <label for="fav-issue">Favorite Issue</label>
-                <input type="text" id="fav-issue" name='fav-issue' placeholder="e.g. Environment">
-                <label for="fav-cand">Favorite Presidential Candidate:</label>
-                <input type="text" id="fav-cand" name="fav-cand" placeholder="e.g. Bernie">
+                <label for="fav-issue">Which candidate are you most likely to donate to?</label>
+                <input type="text" id="user-fav-cand" name="user-fav-cand" placeholder="e.g. Bernie Sanders">
+                <br>
+                <label for="fav-cand">What's your budget?</label>
+                <input type="text" id="user-budget" name="user-budget" placeholder="$2800 max">
+                <br>
+                <label for="fav-cand">What's your zip code?</label>
+                <input type="text" id="user-zip-code" name="user-zip-code">
+                <br>
             </div>
 
             <div>
