--- a/myflask/templates/output.html
+++ b/myflask/templates/output.html
@@ -63,7 +63,6 @@
 
       <table class="table table-hover">
       <tr>
-          <th>Index</th>
           <th>Candidate</th>
           <th>Win Chance Before</th>
           <th>Win Chance After</th>
@@ -71,8 +70,7 @@
           <th>Preference Score</th>
           <th>Campaign Site Link<th></tr>
       {% for record in recommendations %}
-      <tr><td>{{ record['index'] }}</td>
-          <td>{{ record['name']}}</td>
+      <tr><td>{{ record['name']}}</td>
           <td>{{ record['win_chance_before'] }}</td>
           <td>{{ record['win_chance_after'] }}</td>
           <td>{{ record['impact'] }}</td>
