--- a/myflask/templates/input.html
+++ b/myflask/templates/input.html
@@ -20,58 +20,26 @@
 
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="https://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-            </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-    </div>
-</nav>
 <br><br>
 <main class="container">
 
     <div class="starter-template">
-        <h2>Input Page</h2>
-        <p>Enter some user input</p>
+        <h2>PolitImpact</h2>
+        <p>Enter preferences</p>
     </div>
 
     <div class = "container">
 
         <form  action="/output" method="GET">
             <div class="form-group">
-                <label for="fav-issue">Which candidate are you most likely to donate to?</label>
-                <input type="text" id="user-fav-cand" name="user-fav-cand" placeholder="e.g. Bernie Sanders">
+                <label for="user-party">What political party?</label>
+                <input type="text" id="user-party" name="user-party" placeholder="e.g. Democratic or Republican">
                 <br>
-                <label for="fav-cand">What's your budget?</label>
-                <input type="text" id="user-budget" name="user-budget" placeholder="$2800 max">
+                <label for="budget">What's your budget?</label>
+                <input type="text" id="user-budget" name="user-budget" placeholder="$4700 max per candidate">
                 <br>
-                <label for="fav-cand">What's your zip code?</label>
-                <input type="text" id="user-zip-code" name="user-zip-code">
+                <label for="minority">Minorities?</label>
+                <input type="text" id="user-minority" name="user-minority", placeholder="e.g. Women, LGBT, ...">
                 <br>
             </div>
 
