--- a/politimpact/flaskserver/templates/input.html
+++ b/politimpact/flaskserver/templates/input.html
@@ -24,30 +24,39 @@
 <main class="container">
 
     <div class="starter-template">
-        <h2>PolitImpact</h2>
-        <p>Enter preferences</p>
+        <h2>Grassroots Donor</h2>
+        <p>We'll help you find a California legislative candidate to donate to!</p>
     </div>
 
     <div class = "container">
 
-        <form  action="/output" method="GET">
+         <div class="form-group">
+          <label for="MyLabel">What type of candidate do you want to support?</label>
+          <select name='user_party' style="width: 150px;">
+              <option value='republican'>  Republican </option>
+              <option value='ne_republican'> Non-Establishment Republican</option>
+              <option value='democrat'>  Democrat </option>
+              <option value='ne_democratic'> Non-Establishment Democrat</option>
+
+            </select>
+        </div>
+
             <div class="form-group">
-                <label for="user-party">What political party?</label>
-                <input type="text" id="user-party" name="user-party" placeholder="e.g. Democratic or Republican">
-                <br>
-                <label for="budget">What's your budget?</label>
-                <input type="text" id="user-budget" name="user-budget" placeholder="$4700 max per candidate">
-                <br>
-                <label for="minority">Minorities?</label>
-                <input type="text" id="user-minority" name="user-minority", placeholder="e.g. Women, LGBT, ...">
-                <br>
-            </div>
+          <label for="MyLabel">How should I prioritize results?</label>
+          <select name='user_party' style="width: 150px;">
+                <option value='ideology'>  Ideological Alignment </option>
+                <option value='winning'> Likelihood of Winning</option>
+            </select>
+        </div>
 
-            <div>
-                <button type="submit" class="btn btn-default btn-lg">Find my state candidate!</button>
-            </div>
 
-        </form>
+        <div>
+          <button type="submit" class="btn btn-default btn-lg">Find California Legislature Candidates!</button>
+        </div>
+
+
+
+      </form>
     </div>
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
