--- a/politimpact/flaskserver/templates/output.html
+++ b/politimpact/flaskserver/templates/output.html
@@ -29,25 +29,27 @@
     </div>
 
     <div class = "container">
-
         <form  action="/output" method="GET">
             <div class="form-group">
-                <label for="user_today">2018 Date to simulate</label>
-                <input type="text" id="user_today" name="user_today" placeholder="Leave empty for all 2018">
-                <br>
-                <label for="user_party">What political party do you support?</label>
-                <input type="text" id="user_party" name="user_party" placeholder="e.g. Democratic or Republican">
-                <br>
-                <label for="user_priority">Prioritize winning chance or ideology alignment </label>
-                <input type="text" id="user_priority" name="user_priority">
-                <br>
-            </div>
-
-            <div>
-                <button type="submit" class="btn btn-default btn-lg">Find my state candidate!</button>
-            </div>
-
-        </form>
+          <label for="user_party">I want to support a:</label>
+          <select id="user_party", name='user_party' style="width: 150px;">
+              <option value='republican'>  Republican </option>
+<!--              <option value='ne_republican'> Non-Establishment Republican</option>-->
+              <option value='democrat'>  Democrat </option>
+<!--              <option value='ne_democratic'> Non-Establishment Democrat</option>-->
+            </select>
+        </div>
+            <div class="form-group">
+          <label for="user_priority">My priority is:</label>
+          <select id='user_priority', name='user_priority' style="width: 300px;">
+                <option value='ideology'>  Ideological Alignment </option>
+                <option value='winning'> Likelihood of Winning</option>
+            </select>
+        </div>
+        <div>
+          <button type="submit" class="btn btn-default btn-lg">Find California Legislature Candidates!</button>
+        </div>
+      </form>
     </div>
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
