--- a/politimpact/flaskserver/templates/input.html
+++ b/politimpact/flaskserver/templates/input.html
@@ -29,6 +29,7 @@
     </div>
 
     <div class = "container">
+        <center>
         <form  action="/output" method="GET">
             <div class="form-group">
           <label for="user_party">I want to support a:</label>
@@ -50,6 +51,8 @@
           <button type="submit" class="btn btn-default btn-lg">Find California Legislature Candidates!</button>
         </div>
       </form>
+                    </center>
+
     </div>
 
 
