Make output page nicer

--- a/politimpact/flaskserver/templates/input.html
+++ b/politimpact/flaskserver/templates/input.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.1/assets/img/favicons/favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Grassroots Donor</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/starter-template/">
 
@@ -25,7 +25,7 @@
 
     <div class="starter-template">
         <h2>Grassroots Donor</h2>
-        <p>We'll help you find a California legislative candidate to donate to!</p>
+        <p>Political Consulting for the People!</p>
     </div>
 
     <div class = "container">
@@ -39,12 +39,16 @@
               <option value='democrat'>  Democrat </option>
 <!--              <option value='ne_democratic'> Non-Establishment Democrat</option>-->
             </select>
-        </div>
-            <div class="form-group">
+            </div>
+            <div class="form-group"> My budget is:
+            <input type="text" name="user_budget" placeholder="$4700 max">
+            </div>
+        <div class="form-group">
           <label for="user_priority">My priority is:</label>
           <select id='user_priority', name='user_priority' style="width: 300px;">
-                <option value='ideology'>  Ideological Alignment </option>
-                <option value='winning'> Likelihood of Winning</option>
+                <option value='ideology'> Ideological Alignment with Candidates</option>
+<!--                <option value='winning'> Candidates' Chance of Winning</option>-->
+                <option value='impact'> Impact of my Donation</option>
             </select>
         </div>
         <div>
