--- a/politimpact/flaskserver/templates/output.html
+++ b/politimpact/flaskserver/templates/output.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/docs/4.1/assets/img/favicons/favicon.ico">
 
-    <title>PolitImpact</title>
+    <title>Grassroots Donor</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/starter-template/">
 
@@ -24,8 +24,8 @@
 <main class="container">
 
     <div class="starter-template">
-        <h2>PolitImpact</h2>
-        <p>Enter preferences</p>
+        <h2>Grassroots Donor</h2>
+        <p>Political Consulting for the People!</p>
     </div>
 
     <div class = "container">
@@ -39,19 +39,24 @@
               <option value='democrat'>  Democrat </option>
 <!--              <option value='ne_democratic'> Non-Establishment Democrat</option>-->
             </select>
-        </div>
-            <div class="form-group">
+            </div>
+            <div class="form-group"> My budget is:
+            <input type="text" name="user_budget" placeholder="$4700 max">
+            </div>
+        <div class="form-group">
           <label for="user_priority">My priority is:</label>
           <select id='user_priority', name='user_priority' style="width: 300px;">
-                <option value='ideology'>  Ideological Alignment </option>
-                <option value='winning'> Likelihood of Winning</option>
+                <option value='ideology'> Ideological Alignment with Candidates</option>
+<!--                <option value='winning'> Candidates' Chance of Winning</option>-->
+                <option value='impact'> Impact of my Donation</option>
             </select>
         </div>
         <div>
           <button type="submit" class="btn btn-default btn-lg">Find California Legislature Candidates!</button>
         </div>
       </form>
-            </center>
+                    </center>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
@@ -61,9 +66,10 @@
 
     <div class="container">
       <div class="starter-template">
-        <h3>Results:</h3>
         <p class="lead">
-            These are the races where you could have an impact!
+            These are the races where nobody from your party is projected to be in the top 2 for the Primary Election.<br>
+            With your help, they can raise enough money to change the outcome and make it to the General Election! <br>
+            Click on your desired candidate for a shareable message!<br>
         </p>
       </div>
 
@@ -73,21 +79,21 @@
           <th>Candidate</th>
           <th>Party</th>
 <!--          <th>Ideology Alignment Score (1 is best) </th>-->
-          <th>Vote Share Now</th>
-          <th>Donation to Win Primary</th>
-          <th>Vote Share After Donation</th>
-          <th>Impact of Donation (as % of votes)</th>
+          <th>Projected Vote Share Now</th>
+          <th>Donations Required to Finish Primary in Top 2</th>
+          <th>Projected Vote Share Including Donations</th>
+          <th>Number of {{ user_budget }} Donations Required</th>
 <!--          <th>Win Chance Before</th>-->
           <th>Campaign Site Link<th></tr>
       {% for record in recommendations %}
-      <tr><td>{{ record['CONTEST_NAME']}}</td>
+      <tr id="{{ record['CANDIDATE_NAME'] }}" ><td>{{ record['CONTEST_NAME'] }}</td>
           <td>{{ record['CANDIDATE_NAME']}}</td>
           <td>{{ record['PARTY_NAME'] }}</td>
 <!--          <td>{{ record['IDEOLOGY_ALIGNMENT'] }}</td>-->
-          <td>{{ '0.0f' % record['VOTE_PCT_BEFORE'] | float}}%</td>
+          <td>{{ record['VOTE_PCT_BEFORE'] }}</td>
           <td>{{ record['MIN_DONATION'] }}</td>
-          <td>{{ '0.0f' % record['VOTE_PCT_AFTER']| float}}%</td>
-          <td>{{ '0.0f' % (record['VOTE_PCT_AFTER'] - record['VOTE_PCT_BEFORE']) | float}}%</td>
+          <td>{{ record['VOTE_PCT_AFTER'] }}</td>
+          <td>{{ record['NUM_DONATIONS'] }}</td>
           <td><a href={{ record['web_link'] }}>{{ record['web_link'] }}</a></td>
       </tr>
       {% endfor %}
@@ -104,5 +110,21 @@
     <script src="../../assets/js/vendor/popper.min.js"></script>
     <script src="../../dist/js/bootstrap.min.js"></script>
   <script src="static/js/bootstrap.min.js"></script>
+
+<script>
+    function popupbox() {
+        {% for record in recommendations %}
+        if (this.id == "{{record['CANDIDATE_NAME']}}")
+        {
+            alert("{{record['TEXT']|safe}}");
+            return;
+        }
+        {% endfor %}
+    }
+
+    {% for record in recommendations %}
+    document.getElementById("{{record['CANDIDATE_NAME']}}").onclick = popupbox;
+    {% endfor %}
+</script>
   </body>
 </html>
