fixed input bug

--- a/grassrootsdonor/templates/output.html
+++ b/grassrootsdonor/templates/output.html
@@ -67,9 +67,11 @@
     <div class="container">
       <div class="starter-template">
         <p class="lead">
-            These are the races where nobody from your party is projected to be in the top 2 for the Primary Election.<br>
-            With your help, they can raise enough money to change the outcome and make it to the General Election! <br>
-            Click on your desired candidate for a shareable message!<br>
+            These are the races where no {{ user_party.title() }} is projected to be in the top 2 for the Primary Election.<br>
+            <br>
+            By donating to these candidates, you are more likely to add {{ user_party.title() }} to the legislature.
+            <br>
+            Click on your desired candidate for a message to share with others.<br>
         </p>
       </div>
 
