Ideological Gain instead of alignment

--- a/grassrootsdonor/templates/input.html
+++ b/grassrootsdonor/templates/input.html
@@ -46,7 +46,7 @@
         <div class="form-group">
           <label for="user_priority">My priority is:</label>
           <select id='user_priority', name='user_priority' style="width: 300px;">
-                <option value='ideology'> Ideological Alignment with Candidates</option>
+                <option value='ideology'> Ideological Gain </option>
 <!--                <option value='winning'> Candidates' Chance of Winning</option>-->
                 <option value='impact'> Impact of my Donation</option>
             </select>
